<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>abh3_can_launch</name>
  <version>0.1.0</version>
  <description>This Package is CAN_Bus Launch for ABH3/ABH3c</description>
  <maintainer email="furusawata@wacogiken.co.jp">Takahisa Furusawa</maintainer>
  <license>BSD License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>launch_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
